# palle-matalu

./:  CONTRIBUTING.md  .gitignore  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Description_present.md  LICENSE  Merge_request_templates.md  README.md  Report.md  Tags_present.md  app.py  data.json  issue_template.md  pyproject.toml  requirements.txt
